--- a/FrontEnd/angular.json
+++ b/FrontEnd/angular.json
@@ -136,5 +136,8 @@
       }
     }
   },
-  "defaultProject": "frontend"
+  "defaultProject": "frontend",
+  "cli": {
+    "analytics": false
+  }
 }
