--- a/FrontEnd/angular.json
+++ b/FrontEnd/angular.json
@@ -86,7 +86,9 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": [],
+            "scripts": [
+              
+            ],
             "assets": [
               "src/favicon.ico",
               "src/assets"
