--- a/FrontEnd/angular.json
+++ b/FrontEnd/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "6c30653a-8562-47db-8784-35bfbbc361c9"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
