Completed interview test

--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,7 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+.vscode/launch.json
+.vscode/tasks.json
+FrontEnd/package-lock.json
+FrontEnd/package-lock.json
