--- a/InterviewTest/Properties/launchSettings.json
+++ b/InterviewTest/Properties/launchSettings.json
@@ -20,11 +20,11 @@
     "InterviewTest": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "api/heroes",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:5000"
+      "applicationUrl": "http://localhost:4201"
     }
   }
 }
