--- a/FrontEnd/angular.json
+++ b/FrontEnd/angular.json
@@ -27,9 +27,13 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+                "./src/bootstrap-manual/bootstrap.min.css",
+                "./src/Site.css"
             ],
-            "scripts": [],
+            "scripts": [
+                "./src/bootstrap-manual/jquery.min.js",
+                "./src/bootstrap-manual/bootstrap.min.js"
+            ],
             "es5BrowserSupport": true
           },
           "configurations": {
@@ -84,9 +88,14 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.scss"
+                "./src/bootstrap-manual/bootstrap.min.css",
+                "./src/Site.css"
             ],
-            "scripts": [],
+            "scripts": [
+                "./src/bootstrap-manual/jquery.min.js",
+                "./src/bootstrap-manual/bootstrap.min.js"
+                
+            ],
             "assets": [
               "src/favicon.ico",
               "src/assets"
