--- a/my-app1/package.json
+++ b/my-app1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "my-app",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -21,14 +21,13 @@
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
-    "tar": "^6.1.11",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.0.2",
-    "@angular/cli": "^13.0.2",
-    "@angular/compiler-cli": "^13.0.0",
+    "@angular-devkit/build-angular": "~0.12.0",
+    "@angular/cli": "~7.2.4",
+    "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
@@ -36,14 +35,15 @@
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^6.3.8",
+    "karma": "~3.1.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~7.0.0",
+    "protractor": "~5.4.0",
+    "sass": "^1.43.4",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~4.4.4"
+    "typescript": "~3.2.2"
   }
 }
