--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -12,15 +12,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.2.0",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
+    "@angular/common": "^7.2.16",
+    "@angular/compiler": "^7.2.0",
+    "@angular/core": "^13.0.0",
     "@angular/forms": "~7.2.0",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "angular-in-memory-web-api": "^0.13.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
+    "sass": "^1.52.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
