--- a/FrontEnd/tsconfig.json
+++ b/FrontEnd/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "paths": { "@angular/*": [ "./node_modules/@angular/*" ] },
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
