Couple of changes

--- a/FrontEnd/tsconfig.json
+++ b/FrontEnd/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "paths": {
+      "tslib" : ["path/to/node_modules/tslib/tslib.d.ts"]
+  },
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
