--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -26,7 +26,6 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "~7.3.7",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
     "@types/node": "~8.9.4",
@@ -43,6 +42,8 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "typescript": "~3.2.2",
+    "@angular-devkit/core": "~0.0.23",
+    "@angular-devkit/schematics": "~0.0.42"
   }
 }
